# tiny-c

./: .gitmodules  LICENSE
docs/: README.md
in_class/: README.md
in_class/24-09-18/: Makefile  calc2.l  calc2.y
project/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh
project/docs/html/: annotated.html  md__r_e_a_d_m_e.html  modules.html  pages.html  searchdata.js  structast__node__s.html  structbexpr__n.html  structconst__n.html  structdecl__n.html  structif__else__n.html  structroot.html  structuexpr__n.html  structvar__n.html  structwhile__n.html  unionnode__data.html
project/html/: annotated.html  ast_8h_source.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  index.html  menudata.js  namespaces.html  pages.html  structast__node__t.html  structbexpr__n.html  structconst__n.html  structfunc__n.html  structif__else__n.html  structvar__n.html
project/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  searchdata.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js  variables_9.js
project/include/: ast.h  pretty_print.h  traversal.h  vector.h
project/src/: ast.c  lexer.l  minic.c  minic.y  parser.y  pretty_print.c  tinycc.c  traversal.c  vector.c
project/test/: CMakeLists.txt
project/test/src/: compile_test.c
project_1/: .gitignore  CMakeLists.txt  Doxyfile  README.md
project_1/include/: ast.h  pretty_print.h  traversal.h
project_1/src/: ast.c  lexer.l  parser.y  vector.c
project_2/: CMakeLists.txt  build.sh
project_2/docs/: README.md
project_2/include/: llvm_utils.h  optimizer.h  print_utils.h  set_utils.h  vec.h
project_2/src/: llvm_utils.c  main.c  optimizer.c  set_utils.c  vec.c
project_2/test/: test.ll  test1.ll  test2.ll  test3.ll  test4.ll
project_3/: .clang-format  CMakeLists.txt
project_3/docs/: README.md
project_3/include/: LLVMUtils.h  asmUtils.h  codegen.h
project_3/src/: LLVMUtils.cpp  asmUtils.cpp  codegen.cpp  main.cpp
short_assignments/assign_0/: README.md  comments.lex
short_assignments/assign_1/: Makefile  README.md  counter.lex
short_assignments/assign_2/: Makefile  README.md  a.out  grep.lex  lex.yy.c
short_assignments/assign_3/: Makefile  calc.lex
